--- a/MinesweeperWeb/Views/Home/Index.cshtml
+++ b/MinesweeperWeb/Views/Home/Index.cshtml
@@ -1,8 +1,28 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model Board
+@* @{
+    ViewData["Title"] = "Minesweeper";
+} *@
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-1 mb-8">Minesweeper</h1>
+    <form asp-controller="Game" asp-action="Play" method="post">
+        @* @Html.AntiForgeryToken() <!-- Anti-forgery token for security --> *@
+        <div class="container w-25">
+            <div class="mb-3">
+                <label asp-for="Rows" class="h4"></label>
+                <input asp-for="Rows" class="form-control" type="number" value="8"/>
+                <span asp-validation-for="Rows" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Columns" class="h4"></label>
+                <input asp-for="Columns" class="form-control" type="number" value="8" />
+                <span asp-validation-for="Columns" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary" style="width:150px">Play</button>
+        </div>
+    </form>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
