--- a/MinesweeperWeb/wwwroot/css/style.css
+++ b/MinesweeperWeb/wwwroot/css/style.css
@@ -2,14 +2,12 @@
     outline: none;
 }
 .grid-container {
-    /*height: 20px;*/
-    /*width: 100%;*/
     border: 1px solid black;
     display: grid;
     margin: 50px auto 0px;
     border: 5px solid black;
     background-color: grey;
-    opacity:0.9;
+    /*opacity:0.9;*/
     
 }
 .grid-item {
@@ -26,6 +24,11 @@
 }
 .opened {
     background-image: url("/Assets/img/opened.svg");
+    font-size: 20px;
+    color: white;
+}
+.mine {
+    background-image: url("/Assets/img/mine.svg");
 }
 .btn {
     width: 100%;
