--- a/MinesweeperWeb/Views/Game/Play.cshtml
+++ b/MinesweeperWeb/Views/Game/Play.cshtml
@@ -1,19 +1,61 @@
 ﻿@model Board 
+@using Newtonsoft.Json;
 @{
 	
 }
 <div class="main">
 	<div class="head">
-		<h1 class="text-center">column = @Model.Rows rows = @Model.Columns</h1>
+		<h1 class="text-center">column = @Model.Height rows = @Model.Width</h1>
 	</div>
-	<div class="grid-container" style="width: @(30*Model.Columns + 10)px; grid-template-columns: repeat(@Model.Columns, 30px); grid-template-rows: repeat(@Model.Rows, 30px);">
-		@for(int i = 0; i < Model.Rows; i++) {
-			@for(int j = 0; j < Model.Columns; j++) {
+	<div class="grid-container" style="width: @(30*Model.Width + 10)px; grid-template-columns: repeat(@Model.Width, 30px); grid-template-rows: repeat(@Model.Height, 30px);">
+		@for(int i = 0; i < Model.Height; i++) {
+			@for(int j = 0; j < Model.Width; j++) {
 				<div class="grid-item closed"></div>
 			}
 		}
 	</div>
-	<div class="grid-foot"></div>
+	<div class="grid-foot row">
+        <a asp-controller="Home" asp-action="Index" type="button" class="btn btn-primary mt-5 bg-dark w-25 mx-auto">Go Back</a>
+    </div>
+
+	<script>
+        var gridItems = document.querySelectorAll(".grid-item");
+        // call the function generateBoard to get initial board stored into a var
+        /*var board = [
+            [9, 1, 0, 0, 0, 0, 0, 0],
+            [1, 1, 0, 0, 0, 0, 0, 0],
+            [0, 0, 0, 0, 0, 0, 0, 0],
+            [0, 0, 0, 0, 0, 0, 0, 0],
+            [0, 0, 0, 0, 0, 0, 0, 0],
+            [0, 0, 0, 0, 0, 0, 0, 0],
+            [0, 0, 0, 0, 0, 0, 0, 0],
+            [0, 0, 0, 0, 0, 0, 0, 0],
+        ]
+        */
+        let bombInt = 9;
+        var board = @Html.Raw(JsonConvert.SerializeObject(Model.BoardArr));
+        console.log(board);
+        // check if grid item is a closed cell, which can only be clicked on
+        gridItems.forEach((gridItem, index) => {
+            if (gridItem.classList.contains("closed")) {
+                gridItem.addEventListener("click", function () {
+                    gridItem.classList.remove("closed");
+                    // clickable
+                    var x = Math.floor(index / board.length);
+                    var y = index % board.length;
+
+                    if (board[x][y] == @Model.getLandminesInt()) {
+                        gridItem.classList.add("mine");
+                    } else if (board[x][y] == 0) {
+                        gridItem.classList.add("opened");
+                    } else {
+                        gridItem.classList.add("opened");
+                        gridItem.innerHTML = board[x][y];
+                    }
+                })
+            }
+        })
+    </script>
 </div>
 
 
