--- a/MinesweeperWeb/Views/Home/Index.cshtml
+++ b/MinesweeperWeb/Views/Home/Index.cshtml
@@ -9,14 +9,14 @@
         @* @Html.AntiForgeryToken() <!-- Anti-forgery token for security --> *@
         <div class="container w-25">
             <div class="mb-3">
-                <label asp-for="Rows" class="h4"></label>
-                <input asp-for="Rows" class="form-control" type="number" value="8"/>
-                <span asp-validation-for="Rows" class="text-danger"></span>
+                <label asp-for="Height" class="h4"></label>
+                <input asp-for="Height" class="form-control" type="number" value="8"/>
+                <span asp-validation-for="Height" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Columns" class="h4"></label>
-                <input asp-for="Columns" class="form-control" type="number" value="8" />
-                <span asp-validation-for="Columns" class="text-danger"></span>
+                <label asp-for="Width" class="h4"></label>
+                <input asp-for="Width" class="form-control" type="number" value="8" />
+                <span asp-validation-for="Width" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary" style="width:150px">Play</button>
         </div>
