--- a/MinesweeperWeb/wwwroot/css/style.css
+++ b/MinesweeperWeb/wwwroot/css/style.css
@@ -1,14 +1,28 @@
 ﻿* {
     outline: none;
 }
+.head {
+    display: flex;
+    justify-content: space-between;
+}
+
+.body-container {
+    display: flex;
+    justify-content: center;
+}
+
+.right-container {
+    margin-left: 50px;
+    width: 100px;
+    border: 1px solid black;
+}
 .grid-container {
     border: 1px solid black;
     display: grid;
-    margin: 50px auto 0px;
+    /*margin: 50px auto 0px;*/
     border: 5px solid black;
     background-color: grey;
     /*opacity:0.9;*/
-    
 }
 .grid-item {
     width: 30px;
@@ -33,3 +47,8 @@
 .btn {
     width: 100%;
 }
+.flag {
+    padding-top:7px;
+    color:darkred;
+}
+
